add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/AntiAim/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Triggerbot/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Visuals/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Aimbot/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Removals/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Utils/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Config/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Menu/")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/Miscelaneous/")